# sports-context-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.py  pyproject.toml  server.py
.github/workflows/: ingest_match_data.yml  ingest_press_content.yml
jobs/: ingest_match_data.py  ingest_press_content.py
tests/: conftest.py  test_config.py  test_ingest_match_data.py  test_ingest_press_content.py  test_tools_press.py  test_tools_stats.py
tools/: query_historical_stats.py  query_press_conferences.py
